Fix link positioning

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         <section class="contact">
             <h1 class="title">Miles Vranas</h1>
             <h2 class="sub-title">Site Under Construction</h2>
-            <div class="link">
-                <p style="display: inline;">Visit My </p>
-                <a  style="display: inline;" href="https://www.linkedin.com/in/miles-vranas/">Linkedin</a>
-            </div>
+            <h3>Visit My <a style="color: #0A66C2; text-decoration: none;" href="https://www.linkedin.com/in/miles-vranas/">Linkedin</a></h3>
             
         </section>
     </body>
